[MODUSERS-360] - Refactoring